# MnemoCore-Persistent-Cognitive-Ai-Memory

./: .coveragerc  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  HAIM Phase 3 5 Infinite.md  LICENSE  MnemoCore Phase 3 5 Infinite.md  MnemoCore_Review_v2.docx  PRODUCTION_READINESS_PLAN.md  PRODUCTION_REMEDIATION_PROGRESS.md  README.md  REFACTORING_TODO.md  RELEASE_CHECKLIST.md  RELEASE_NOTES_3.0.0.md  REVIEW_v4.5.0-beta.md  ROADMAP.md  SECURITY.md  benchmark_results.txt  config.yaml  coverage.json  debug_async.py  debug_imports.py  debug_qdrant.py  docker-compose.yml  failed_bayesian.txt  failed_final.txt  failed_last.txt  failed_tests.txt  failed_tests2.txt  git_status.txt  grafana-dashboard.json  mnemocore_verify.py  phase 6.md.md  pyproject.toml  pytest.ini  requirements-dev.txt  (+13 more)
.claude/: settings.local.json
.github/workflows/: ci.yml  docker-publish.yml  release-publish.yml
.hypothesis/constants/: 005f6d022fca8512  04b8bd4ca1f09394  07c1523550b36aa6  09b22a3196133870  0c4f3cb1a621f458  11f31347f644adf8  15f93529bb74aff2  18eeb07fa511f3ac  1bfca8dd25e5cae1  2f1d47c0eac2ec9b  34ea3fa79f83f53a  411956eed5341507  4e0d18fc45933ff5  58abb83abb5b28e9  593723e54523bbb5  5ad32e4fdf3ce815  62a1c00093fcd1aa  67a2d05e4c6123b7  692b6d34d03ec737  8539682cd97ac922  903466d5db42f2b6  91e56ce4cbbc6bb8  971bfbb415bafa12  9a682643bf2e97ee  9f02c1ab70a5e843  aad7c7a9ef34f432  ae0f1bd3eb354f2d  b1c05ac0286a8c9a  ba87e4bccff03af7  ba8ab5a0280b953a  bdfd2ace24c3476e  c06578068016c367  c1d2cd337e194f03  cc013b4cb0ea1af5  df9d4b2b8cd586a6  e01b0c4f7220ce99  e5353aeb98728637  ebbf8f0e46c77b40  fd06b906c748d854  fd0704b8408fd194  (+1 more)
.hypothesis/tmp/: tmp77svxc6x  tmpk1ojiuel  tmps409hz5u
.jules/: bolt.md
.superpowers/sdd/: task-3-report.md  task-4-report.md  task-5-report.md
benchmarks/: .gitignore  README.md  __init__.py  agent_memory_baseline.py  base.py  bench_100k_memories.py  bench_permute.py  comparison.py  entrypoint.py  latency.py  memory_footprint.py  pytest_benchmarks.py  regression.py  run_benchmarks.py  runner.py  test_agent_memory_baseline.py  test_agent_memory_fingerprint.py  test_agent_memory_hdv_isolation.py  test_benchmark_smoke.py  throughput.py
data/: mnemocore_hnsw.faiss  mnemocore_hnsw_idmap.json  mnemocore_hnsw_vectors.npy  scenarios.jsonl  subconscious_audit.jsonl  subconscious_evolution.json
docs/: AGENT_MEMORY_INTEGRATIONS.md  AGENT_MEMORY_QUICKSTART.md  AGI_MEMORY_BLUEPRINT.md  API.md  ARCHITECTURE.md  Aggera som en innovatör och en senior arkitekt ino.md  BETA_POLICY.md  CLI.md  CONFIGURATION.md  DEPLOYMENT.md  EMBEDDING_REGISTRY.md  EVENTS.md  FORGETTING.md  GLOSSARY.md  IMPLEMENTATION_PROGRESS.md  LLM_INTEGRATION.md  MCP_IMPLEMENTATION_PLAN.md  PATTERN_LEARNER_SPEC.md  PERFORMANCE.md  RECONSTRUCTIVE_MEMORY.md  ROADMAP.md  SELF_IMPROVEMENT_DEEP_DIVE.md  SUBCONSCIOUS_AI.md  TEST_LANES.md  V3_HYBRID_RUNTIME.md
docs/adr/: 0001-version-authority-and-release-history.md
docs/status/: 2026-07-12-platform-baseline.md
examples/: agent_memory_wow.py  backup_example.py  context_optimizer_demo.py  demo_wow.py  hybrid_search_demo.py
helm/mnemocore/: .helmignore  Chart.yaml  values.yaml
integrations/: README.md  mnemo_bridge.py  setup.ps1  setup.sh
integrations/aider/: aider_wrap.sh
integrations/claude_code/: CLAUDE_memory_snippet.md  hooks_config_fragment.json  mcp_config.json
integrations/gemini_cli/: GEMINI_memory_snippet.md  gemini_wrap.sh
integrations/universal/: context_inject.sh  store_session.sh
k8s/: README.md
scripts/: README.md  bisect_import.py  insert_rlm_endpoint.py  insert_rlm_integrator.py  refactor_imports.py
scripts/debug/: bisect_import.py  debug_async.py  debug_qdrant.py
scripts/docker/: entrypoint.sh
scripts/ops/: agent_memory_release_smoke.py  healthcheck.py  push_v2_safe.ps1  sync_qdrant.py  upload_hf.py  verify_id.py
src/: __init__.py  llm_integration.py  mcp_server.py
src/api/: main.py  middleware.py
src/core/: README.md  __init__.py  async_storage.py  attention.py  batch_ops.py  bayesian_ltp.py  binary_hdv.py  config.py  consolidation.py  consolidation_worker.py  engine.py  exceptions.py  gap_detector.py  gap_filler.py  hdv.py  hnsw_index.py  holographic.py  immunology.py  logging_config.py  metrics.py  node.py  qdrant_store.py  recursive_synthesizer.py  reliability.py  resilience.py  router.py  semantic_consolidation.py  storage_backends.py  subconscious_ai.py  synapse.py  synapse_index.py  tier_manager.py
src/mcp/: __init__.py  schemas.py  server.py
src/meta/: goal_tree.py  learning_journal.py
src/mnemocore/: __init__.py  _memory.py  _version.py  agent_interface.py  llm_integration.py
src/nightlab/: __init__.py  engine.py  scheduler.py
src/subconscious/: consolidation_worker.py  daemon.py
tests/: _test_qdrant_store.py  benchmark_encoding.py  benchmark_performance.py  benchmark_query.py  conftest.py  debug_test.py  repro_sync.py  reproduce_dream_binding.py  stress_test_wm.py  test_agent_interface.py  test_agent_profile.py  test_anticipatory.py  test_api_functional.py  test_api_health_runtime.py  test_api_security.py  test_api_security_limits.py  test_associations.py  test_associations_example.py  test_async_lock.py  test_async_storage.py  test_attention_extended.py  test_auto_bind.py  test_backup_manager.py  test_batch_ops.py  test_bayesian_ltp.py  test_binary_hdv.py  test_binary_hdv_large.py  test_binary_hdv_properties.py  test_cli.py  test_cli_formatters.py  test_cognitive_services.py  test_concurrency.py  test_concurrency_events.py  test_concurrency_file_safety.py  test_concurrency_store_query.py  test_confidence.py  test_config.py  test_consolidation.py  test_consolidation_extended.py  test_consolidation_worker.py  (+90 more)
tests/agent_memory/: test_client.py  test_erasure.py  test_fingerprint.py  test_hdv_isolation.py  test_models.py  test_schema_v2.py  test_sqlite_codecs.py  test_sqlite_store.py  test_sqlite_timeline.py  test_timeline.py
tests/api/: test_v3_memories.py
tests/hybrid/: test_factory.py  (+5 more)
vector_core/: README.md  prep_migration.py
(+222 files in other folders)
