[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mnemocore"
dynamic = ["version"]
description = "MnemoCore – Infrastructure for Persistent Cognitive Memory. A hierarchical AI memory engine with hot/warm/cold tiers, vector search, and subconscious consolidation."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
    { name = "Robin", email = "" },
]
keywords = [
    "ai",
    "memory",
    "cognitive",
    "vector-search",
    "qdrant",
    "llm",
    "hyperdimensional-computing",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

# Runtime dependencies (canonical source of truth).
#
# Compatibility policy for the current 2.x line: retain the established
# dependency set so existing HAIM/REST installations keep working. AgentMemory
# itself remains local-first and does not initiate service connections at
# import time. A dependency-minimal distribution is a future major-release
# migration, not a silent change to an installed 2.x application.
dependencies = [
    "numpy>=1.24",
    "requests>=2.31.0",
    "aiohttp>=3.9.0",
    "aiosqlite>=0.19.0",
    "ijson>=3.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "redis>=2.0.0",
    "qdrant-client>=1.7.0",
    "prometheus-client>=0.17.0",
    "loguru>=0.7.0",
    "msgpack>=1.0.0",
    "mcp>=0.1.0",
    "faiss-cpu>=1.7.4",
    "pybreaker>=1.0.0",
    "click>=8.1.0",
    "tabulate>=0.9.0",
    "psutil>=5.9.0",
    "croniter>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-benchmark>=4.0.0",
    "hypothesis>=6.0.0",
    "mypy>=1.0.0",
    "flake8>=6.0.0",
    "isort>=2.0.0",
    "black>=23.0.0",
    "coverage>=7.0.0",
]
benchmark = [
    "aiohttp>=3.9.0",
    "aiosqlite>=0.19.0",
    "croniter>=1.3.0",
    "faiss-cpu>=1.7.4",
    "ijson>=3.0.0",
    "loguru>=0.7.0",
    "msgpack>=1.0.0",
    "numpy>=1.24",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-benchmark>=4.0.0",
    "psutil>=5.9.0",
    "prometheus-client>=0.17.0",
    "pybreaker>=1.0.0",
    "pyyaml>=6.0",
    "qdrant-client>=1.7.0",
    "redis>=2.0.0",
    "requests>=2.31.0",
]
server = [
    "aiohttp>=3.9.0",
    "aiosqlite>=0.19.0",
    "croniter>=1.3.0",
    "faiss-cpu>=1.7.4",
    "fastapi>=0.100.0",
    "ijson>=3.0.0",
    "loguru>=0.7.0",
    "mcp>=0.1.0",
    "msgpack>=1.0.0",
    "numpy>=1.24",
    "prometheus-client>=0.17.0",
    "pydantic>=2.0.0",
    "pybreaker>=1.0.0",
    "pyyaml>=6.0",
    "qdrant-client>=1.7.0",
    "redis>=2.0.0",
    "requests>=2.31.0",
    "psutil>=5.9.0",
    "uvicorn>=0.23.0",
]
cli = [
    "aiohttp>=3.9.0",
    "aiosqlite>=0.19.0",
    "click>=8.1.0",
    "croniter>=1.3.0",
    "faiss-cpu>=1.7.4",
    "ijson>=3.0.0",
    "loguru>=0.7.0",
    "msgpack>=1.0.0",
    "numpy>=1.24",
    "psutil>=5.9.0",
    "prometheus-client>=0.17.0",
    "pybreaker>=1.0.0",
    "pyyaml>=6.0",
    "qdrant-client>=1.7.0",
    "redis>=2.0.0",
    "requests>=2.31.0",
    "tabulate>=0.9.0",
]
legacy = [
    "aiohttp>=3.9.0",
    "aiosqlite>=0.19.0",
    "croniter>=1.3.0",
    "faiss-cpu>=1.7.4",
    "ijson>=3.0.0",
    "loguru>=0.7.0",
    "msgpack>=1.0.0",
    "numpy>=1.24",
    "psutil>=5.9.0",
    "prometheus-client>=0.17.0",
    "pybreaker>=1.0.0",
    "pyyaml>=6.0",
    "qdrant-client>=1.7.0",
    "redis>=2.0.0",
    "requests>=2.31.0",
]
viz = [
    "plotly>=2.0.0",
    "pandas>=2.0.0",
]
backup = [
    "pyarrow>=14.0.0",
    "fastparquet>=2024.0.0",
]
llm = [
    "tiktoken>=0.5.0",
    "openai>=1.0.0",
    "anthropic>=0.18.0",
]

[project.urls]
Homepage = "https://github.com/RobinALG87/MnemoCore-Persistent-Cognitive-Ai-Memory"
Repository = "https://github.com/RobinALG87/MnemoCore-Persistent-Cognitive-Ai-Memory"
"Bug Tracker" = "https://github.com/RobinALG87/MnemoCore-Persistent-Cognitive-Ai-Memory/issues"

[project.scripts]
mnemocore = "mnemocore.api.entrypoint:main"
mnemocore-cli = "mnemocore.cli.entrypoint:main"
mnemocore-benchmark = "benchmarks.entrypoint:main"

[tool.hatch.version]
path = "src/mnemocore/_version.py"

# ── Hatchling build configuration ─────────────────────────────────────────────
[tool.hatch.build.targets.wheel]
packages = ["src/mnemocore", "benchmarks"]
exclude = [
    "benchmarks/agent_memory_baseline.py",
    "benchmarks/bench_*.py",
    "benchmarks/pytest_benchmarks.py",
    "benchmarks/test_*.py",
]

[tool.hatch.build.targets.sdist]
include = [
    "src/",
    "benchmarks/",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
    "config.yaml",
]

# ── Pytest ─────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"
markers = [
    "benchmark: marks tests as benchmarks (deselect with '-m \"not benchmark\"')",
    "regression: marks tests as regression tests",
    "slo: marks tests as SLO (Service Level Objective) tests",
    "integration: marks tests requiring external services (Redis, Qdrant)",
    "slow: marks tests as slow-running (enable with '--run-slow')",
    "requires_redis: marks tests requiring a running Redis instance",
    "requires_qdrant: marks tests requiring a running Qdrant instance",
]

# ── Coverage ───────────────────────────────────────────────────────────────────
[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "**/__pycache__/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false
